fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ html {
   height: 100%;
   font-family: "avo";
   font-size: 0.8125rem;
-  overflow: scroll;
   background-color: black; }
 
 p {
